tests/specs/ecosystem/noble/secp256k1/2_1_0.test
noble/secp256k1/2.1.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:15:7
   | 
15 | const ge = (n: bigint) => big(n) && 0n < n && n < N;    // is group element
   |       ^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:23:7
   | 
23 | const u8n = (data?: any) => new Uint8Array(data);       // creates Uint8Array
   |       ^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:24:7
   | 
24 | const toU8 = (a: Hex, len?: number) => au8(str(a) ? h2b(a) : u8n(au8(a)), len); // norm(hex/u8a) to u8a
   |       ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:25:7
   | 
25 | const mod = (a: bigint, b = P) => { let r = a % b; return r >= 0n ? r : b + r; }; // mod division
   |       ^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /index.ts:30:19
   | 
30 |   static readonly BASE = new Point(Gx, Gy, 1n);         // Generator / base point
   |                   ^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /index.ts:31:19
   | 
31 |   static readonly ZERO = new Point(0n, 1n, 0n);         // Identity / zero point
   |                   ^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:32:10
   | 
32 |   static fromAffine (p: AffinePoint) {                  // (0, 0) => (0, 1, 0), not (0, 0, 1)
   |          ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:51:10
   | 
51 |   static fromPrivateKey(k: PrivKey) { return G.mul(toPriv(k)); } // Create point from a private key.
   |          ^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:52:7
   | 
52 |   get x() { return this.aff().x; }                      // .x, .y will call expensive toAffine:
   |       ^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:53:7
   | 
53 |   get y() { return this.aff().y; }                      // should be used with care.
   |       ^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:61:3
   | 
61 |   negate() { return new Point(this.px, mod(-this.py), this.pz); } // Flip point over y coord
   |   ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:62:3
   | 
62 |   double() { return this.add(this); }                   // Point doubling: P+P, complete formula.
   |   ^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:63:3
   | 
63 |   add(other: Point) {                                   // Point addition: P+Q, complete, exception
   |   ^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:87:3
   | 
87 |   mul(n: bigint, safe = true) {                         // Point scalar multiplication.
   |   ^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /index.ts:98:3
   | 
98 |   mulAddQUns(R: Point, u1: bigint, u2: bigint) {        // Double scalar mult. Q = u1⋅G + u2⋅R.
   |   ^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:115:3
    | 
115 |   multiply(n: bigint) { return this.mul(n); }           // Aliases to compress code
    |   ^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:116:3
    | 
116 |   aff() { return this.toAffine(); }
    |   ^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:117:3
    | 
117 |   ok() { return this.assertValidity(); }
    |   ^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:118:3
    | 
118 |   toHex(isCompressed = true) {                          // Encode point to hex string.
    |   ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:123:3
    | 
123 |   toRawBytes(isCompressed = true) {                     // Encode point to Uint8Array.
    |   ^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-destructuring]: found destructuring, which is not supported in the public API
   --> /index.ts:127:7
    | 
127 | const { BASE: G, ZERO: I } = Point;                     // Generator, identity points
    |       ^^^^^^^^^^^^^^^^^^^^
    = hint: separate each destructured symbol into its own export statement

  info: destructuring can not be inferred by fast check
  docs: https://jsr.io/go/slow-type-unsupported-destructuring


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:128:7
    | 
128 | const padh = (n: number | bigint, pad: number) => n.toString(16).padStart(pad, '0');
    |       ^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:149:7
    | 
149 | const concatB = (...arrs: Bytes[]) => {                 // concatenate Uint8Array-s
    |       ^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:178:7
    | 
178 | const getPublicKey = (privKey: PrivKey, isCompressed = true) => {   // Make public key from priv
    |       ^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:186:10
    | 
186 |   static fromCompact(hex: Hex) {                        // create signature from 64b compact repr
    |          ^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:190:3
    | 
190 |   assertValidity() { return ge(this.r) && ge(this.s) ? this : err(); } // 0 < r or s < CURVE.n
    |   ^^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:194:3
    | 
194 |   hasHighS() { return moreThanHalfN(this.s); }
    |   ^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:195:3
    | 
195 |   normalizeS() {
    |   ^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:211:3
    | 
211 |   toCompactRawBytes() { return h2b(this.toCompactHex()); } // Uint8Array 64b compact repr
    |   ^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:212:3
    | 
212 |   toCompactHex() { return n2h(this.r) + n2h(this.s); }  // hex 64b compact repr
    |   ^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /index.ts:394:22
    | 
394 |   isValidPrivateKey: (key: Hex) => { try { return !!toPriv(key); } catch (e) { return false; } },
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /index.ts:392:7
    | 
392 | const utils = {                                         // utilities
    |       ^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


